plugins/kotlin/idea/tests/testData/highlighterMetaInfoWithComposeCompilerCheckers/CinNCPropGetter.kt.highlighting
// COMPILER_ARGUMENTS: -Xplugin=$TEST_DIR$/compose_fake_plugin.jar
// FILE: main.kt
// ALLOW_ERRORS
import androidx.compose.runtime.*
@Composable fun C(): Int { return 123 }
val <!HIGHLIGHTING("severity='ERROR'; descr='[COMPOSABLE_EXPECTED]'")!>ncProp<!>: Int get() = <!HIGHLIGHTING("severity='ERROR'; descr='[COMPOSABLE_INVOCATION]'")!>C<!>()
